# suricata-6.0.x

./: .gitignore  CMakeLists.txt  suricata.yaml.in
.github/workflows/: builds.yml  commits.yml  formatting.yml  scorecards-analysis.yml
src/: app-layer-detect-proto.c  app-layer-dnp3.c  app-layer-ftp.c  app-layer-htp.c  app-layer-nfs-tcp.c  app-layer-parser.h  app-layer-smtp.c  app-layer.c  detect-engine-loader.c  flow-hash.c  flow-worker.c  flow.h  output-json-smtp.c  runmode-af-packet.c  runmode-pcap.c  runmodes.c  source-af-packet.c  suricata.c  unix-manager.c  util-mpm-ac.c  util-optimize.h  util-storage.c  util-storage.h  util-time.c
